--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,6 +76,22 @@
             
         }
 
+        /* -------------------------------------------------------------------------------*/
+
+        footer {
+            background: var(--primary-color);
+            color: white;
+            text-align: center;
+            padding: 2rem 1rem;
+            margin-top: 3rem;
+        }
+
+        footer p + p{
+            margin-top: 0.5rem; opacity: 0.8;
+        }
+
+        /* -------------------------------------------------------------------------------*/
+
         /* TABLET - 768px y más */
         @media (min-width: 768px) {
             .header-content {
