--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,7 +26,6 @@
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             color: white;
             padding: 1rem;
-            position: sticky;
             top: 0;
             z-index: 100;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
@@ -173,6 +172,7 @@
             margin: 3rem 0;
             color: var(--text-color);
             background-color: var(--bg-color);
+            align-items: center;
         }
 
         .product-image img {
@@ -185,8 +185,7 @@
         }
 
         .product-info {
-            max-width: 70%;
-            
+            max-width: 80%;            
         }
 
         .description {
@@ -208,6 +207,17 @@
 
         .btn-add-cart:hover {
             background: #c0392b;
+        }
+
+        /* Cart page */
+
+        .cart-detail {
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+            margin: 3rem 0;
+            color: var(--text-color);
+            background-color: var(--bg-color);
         }
 
         /* Footer */
