--- a/styles/styles.css
+++ b/styles/styles.css
@@ -218,6 +218,24 @@
             margin: 3rem 0;
             color: var(--text-color);
             background-color: var(--bg-color);
+            align-items: center;
+        }
+
+        .cart-items{
+            max-width: 70%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .cart-item img {
+            width: 60%;
+            height: auto;
+        }
+
+        .ditem-info {
+            margin: 1rem 0;
+            font-size: 1rem;
         }
 
         /* Footer */
