--- a/styles/styles.css
+++ b/styles/styles.css
@@ -181,12 +181,16 @@
 
         .product-card-btn {
             display: inline-block;
-            background: var(--secondary-color);
+            background: var(--accent-color);
             color: white;
             padding: 0.5rem 1.5rem;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s ease;
+        }
+
+        .product-card-btn:hover {
+            background: #c0392b;
         }
         /* Product page */
 
@@ -206,6 +210,7 @@
             margin-top: 2rem;
             display: flex;
             flex-direction: column;
+            max-width: 500px;
         }
 
         .product-image img {
@@ -404,9 +409,6 @@
             .hamburguer{
             display: none;
            }
-            .product-image img {
-            width: 20rem;
-           }
 
             .cart-total {
             width: 25rem;
@@ -421,9 +423,9 @@
             height: 180px;
            }
 
-            .product-detail {
-            flex-direction: row;
-            }
+            .btn-product-buy {
+            margin-top: 1.5rem;
+           }
 
             nav ul {
                 justify-content: flex-end;
@@ -463,6 +465,20 @@
             height: 200px;
            }
 
+
+            .product-info-name {
+                font-size: 1.8rem;
+            }
+
+            .product-info-price {
+                font-size: 2rem;
+            }
+
+            .product-info-description {
+                font-size: 1.4rem;
+                margin-bottom: 2rem;
+            }
+
             .prop {
                 padding: 5rem 3rem;
             }
@@ -480,7 +496,7 @@
             }
             
             .product-image img {
-            width: 30rem;
+                 width: 30rem;
            }
             
             .prop p {
@@ -488,9 +504,22 @@
             }
 
             .cart-item img {
-            width: 220px;
-            height: 220px;
+                 width: 220px;
+                 height: 220px;
            }
+
+            .product-info-name {
+                font-size: 2rem;
+            }
+
+            .product-info-price {
+                font-size: 2.5rem;
+            }
+
+            .product-info-description {
+                font-size: 1.8rem;
+                margin-bottom: 2rem;
+            }
         }
 
 
