--- a/styles/styles.css
+++ b/styles/styles.css
@@ -258,6 +258,79 @@
             background: #c0392b;
         }
 
+        /* Contact page */
+
+        .contact {
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+            color: white;
+            text-align: center;
+            padding: 3rem 1rem;
+            margin-bottom: 2rem;
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .contact-header{
+            border-bottom: #2c3e50 1px solid;
+            width: 30rem;
+        }
+
+        .contact-header h1{
+            font-size: 3rem;
+            color: white;
+            margin-bottom: 1rem;
+            margin-top: 1rem;
+        }
+
+        .contact-header p{
+           margin-bottom: 1rem;
+        }
+
+        .contact-form{
+            width: 30rem;
+            gap: 1rem;
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+        }
+        
+        .contact-form-inputs{
+            display: flex;
+            flex-direction: column;
+            text-align: left;
+            margin-bottom: 1rem;
+        }
+
+        .form-control{
+            width: 100%;
+            padding: 0.5rem;
+            border: none;
+            border-radius: 5px;
+            font-size: 1rem;
+        }
+
+        .contact-form-inputs label span {
+            color: var(--text-color);
+        }
+
+        .btn-contact-send{
+            display: inline-block;
+            background: var(--accent-color);
+            color: white;
+            padding: 0.75rem 2rem;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+            margin-top: 1rem;
+            width: 200px;
+            margin-bottom: 1rem;
+        }
+
+        .btn-contact-send:hover {
+            background: #c0392b;
+        }
+
         /* Cart page */
 
         .cart {
@@ -323,7 +396,6 @@
             flex-direction: column;
             gap: 1rem;
             margin-top: 1rem;
-            margin-bottom: 1rem;
             border-bottom: #2c3e50 1px solid;
             margin-bottom: 1rem;
             width: 18rem;
