--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,6 @@
             --accent-color: #e74c3c;
             --text-color: #333;
             --bg-color: #f8f9fa;
-            --max-width: 1200px;
         }
 
         body {
@@ -30,7 +29,6 @@
         }
 
         .header-content {
-            max-width: var(--max-width);
             margin: 0 auto;
             display: flex;
             flex-direction: row;
@@ -59,7 +57,6 @@
         .header-content-nav ul {
             list-style: none;
             display: flex;
-            flex-wrap: wrap;
             justify-content: center;
             gap: 1rem;
         }
@@ -80,14 +77,13 @@
             vertical-align: middle;
             width: 20px;
             height: 20px;
-            
         }
 
 
         /* Main Container */
 
         .container {
-            max-width: var(--max-width);
+            max-width: 1200px;
             margin: 0 auto;
             padding: 1rem;
         }
@@ -135,7 +131,7 @@
 
         .products-cards-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));    /*cada columna tiene mínimo 280px de ancho, pero puede crecer hasta ocupar una fracción del espacio disponible*/
             gap: 2rem;
             margin: 3rem 0;
         }
@@ -153,7 +149,6 @@
 
         .product-card img{
             width: 90%;
-            overflow: hidden;
             border-radius: 10px;
             margin-bottom: 1rem;
         }
