--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,6 +49,28 @@
 
         /* Nav-bar */
 
+        .search-container {
+            display: flex;
+            align-items: center;
+            margin: 1rem auto;
+            width: 15rem;
+        }
+
+        #search-input {
+            padding: 15px 25px;
+            width: 100%;
+            height: 2.5rem;
+            border: 3px solid transparent;
+            border-radius: 30px;
+            background: 
+                linear-gradient(var(--bg-color), white) padding-box,
+                linear-gradient(135deg, var(--primary-color), var(--secondary-color)) border-box;
+            font-size: 16px;
+            width: 100%;
+            transition: all 0.3s ease;
+            outline: none;
+        }
+
         .header-content-nav {
             display: none;
             margin-top: 15px;
@@ -129,7 +151,7 @@
 
         /* Cards */
 
-        .products-cards-grid {
+        #products-cards-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));    
             gap: 2rem;
@@ -464,6 +486,10 @@
         /* TABLET - 768px y más */
         @media (min-width: 768px) {
 
+            .search-container {
+            margin: 1rem auto;
+            width: 25rem;
+            }
 
             .contact-header{
                 width: 25rem;
@@ -484,6 +510,15 @@
 
             .prop {
                 display: block;
+            }
+            
+            /* .header-content {
+                margin: 0 2rem;
+            } */
+
+            .header-content {
+                margin: 0 auto;
+                max-width: 70rem;
             }
 
             .header-content-nav {
@@ -523,7 +558,7 @@
                 padding: 4rem 2rem;
             }
 
-            .products-cards-grid {
+            #products-cards-grid {
                 grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
             }
 
@@ -602,7 +637,7 @@
                 padding: 5rem 3rem;
             }
 
-            .products-cards-grid {
+            #products-cards-grid {
                 grid-template-columns: repeat(3, 1fr);
             }
 
