--- a/styles/styles.css
+++ b/styles/styles.css
@@ -267,6 +267,21 @@
         .product-card-btn:hover {
             background: #c0392b;
         }
+        
+        .product-card-addbtn {
+            display: inline-block;
+            background: var(--accent-color);
+            color: white;
+            padding: 0.5rem 1.5rem;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+            margin-bottom: 1rem;
+        }
+
+        .product-card-addbtn:hover {
+            background: #c0392b;
+        }
 
         .no-results{
             grid-column: 1 / -1;
